kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devvault-mongodb
spec:
  serviceName: "mongodb"
  replicas: 1
  selector:
    matchLabels:
      app: devvault-mongodb
  template:
    metadata:
      labels:
        app: devvault-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6-jammy
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  clusterIP: None # Headless service for StatefulSet
  selector:
    app: devvault-mongodb
  ports:
    - port: 27017
      targetPort: 27017
